MB-22005,MB-33687:  Revert bgWaitHisto to Histogram<T>

Revert bgWaitHisto to Histogram<T> as ns_server cant parse
""bg_wait_mean"."

Change-Id: I3475c4c9422c9d816c8654f10eab7c9c4b51669d
Reviewed-on: http://review.couchbase.org/107378
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>